// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex align prop 1`] = `
<div
  className="dsWvVO"
/>
`;

exports[`Flex justify prop 1`] = `
<div
  className="jbrQzH"
/>
`;

exports[`Flex renders 1`] = `
<div
  className="eYwxEz"
/>
`;

exports[`Flex wrap prop 1`] = `
<div
  className="dVIhel"
  wrap={true}
/>
`;
